--- a/.npmrc
+++ b/.npmrc
@@ -1,8 +1,8 @@
 # Use exact versions for dependencies
 save-exact=true
 
-# Disable package-lock.json generation
-package-lock=false
+# Enable package-lock.json generation
+package-lock=true
 
 # Use npm registry
 registry=https://registry.npmjs.org/
